Update OWASP_ZAP_Correction branch in job file

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,9 +2,9 @@ name: PHP
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "OWASP_ZAP_Correction" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "OWASP_ZAP_Correction" ]
 
 permissions:
   contents: read
