--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: PHP
+name: PHP CI (No Composer)
 
 on:
   push:
@@ -14,23 +14,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
-          tools: composer
 
-      - name: Lint PHP files
+      - name: Download PHPUnit
         run: |
-          find . -name "*.php" -not -path "./includes/config.php" -print0 | xargs -0 -n1 php -l
+          wget https://phar.phpunit.de/phpunit-10.phar
+          chmod +x phpunit-10.phar
+          php phpunit-10.phar --version
+
+      - name: PHP Lint
+        run: |
+          find . -name "*.php" -not -path "./vendor/*" -print0 | xargs -0 -n1 php -l
 
       - name: Run PHPUnit tests
-        run: |
-          ./vendor/bin/phpunit --testdox --colors=always
+        run: php phpunit-10.phar --testdox --colors=always
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
@@ -40,6 +43,9 @@ jobs:
           args: >
             -Dsonar.projectKey=Ismail-khlif_miniprojet-DevOps
             -Dsonar.organization=ismail-khlif
+            -Dsonar.sources=.
+            -Dsonar.tests=tests
+            -Dsonar.language=php
 
       - name: SonarCloud Report Link
         run: |
